# clippy-cpp

./: .gitignore  CM-broken.txt  CM-working.txt  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pr.yml
cmake/: setup_boost.cmake
examples/: CMakeLists.txt  README.md  grumpy.cpp  howdy.cpp  return_int.cpp  sort_edges.cpp  sort_string_edges.cpp  sort_strings.cpp
examples/dataframe/: CMakeLists.txt  clip.cpp  clip.hpp  columninfo.cpp  columnquery.cpp  common.hpp  create.cpp  datafind.cpp  experimental  extreme.cpp  importCSV.cpp  metadataquery.cpp  rowquery.cpp
examples/dataframe-load/: CMakeLists.txt  df-common.hpp  load.cpp
examples/dataframe-load/sample_query/: city.py
examples/dataframe/sample_data/: city.csv
examples/jsonvec/: CMakeLists.txt  jsonlines-common.hpp  jsonlines-eval.cpp  jsonlines-getitem.cpp  jsonlines-importFile.cpp  jsonlines-init.cpp  score.json  vector_query.cpp
examples/jsonvec/sample/: sample.py
examples/logic/: CMakeLists.txt  testeval.cpp
examples/logic/tests/: all-001.json  all-002.json  and-001-t.json  and-001.json  and-002-t.json  and-002.json  and-003-null.json  and-003.json  and-004.json  and-005.json  and-006.json  and-007.json  arith-001.json  div-001-1.5.json  div-001.json  eq-001.json  eq-002.json  eq-003.json  eq-004.json  eq-005.json  eq-006.json  eq-007.json  eq-008.json  eq-009.json  eq-010.json  eq-011.json  eq-012.json  eq-014.json  eq-015.json  eq-016.json  eq-017.json  eq-018.json  filter-001.json  fizzbuzz.json  geq-001.json  geq-002.json  geq-003.json  geq-004.json  geq-005.json  geq-006.json  (+117 more)
examples/logic/tests/notworking/: eq-007.json  eq-008.json  greater-004.json
examples/mpi/: CMakeLists.txt  mpi_ranks.cpp  noop.cpp
examples/oo-dataframe/: CMakeLists.txt  df-common.hpp  df-extreme.cpp  df-identity.cpp  df-importFile.cpp  df-init.cpp  df-metadata.cpp  df-rowquery.cpp
examples/oo-dataframe/sample_query/: city.py
examples/oo-howdy/: CMakeLists.txt  howdy-eval.cpp  howdy-getitem.cpp  howdy-greet.cpp  howdy-init.cpp  howdy-setGreeted.cpp  howdy-setGreeting.cpp
examples/wordcounter/: CMakeLists.txt  count_table.hpp  count_words.cpp  top_k_words.cpp  total_words.cpp
examples/ygm/: CMakeLists.txt  ygm_wordcount.cpp
examples/ygm_wordcounter/: CMakeLists.txt  count_table.hpp  ygm_noop.cpp  ygm_top_k_words.cpp  ygm_wordcount.cpp
include/clippy/: clippy-ast.hpp  clippy-eval.hpp  clippy-object.hpp  clippy.hpp  selector.hpp  version.hpp
include/clippy/attic/: clippy-ast.hpp  clippy-eval.hpp
include/experimental/: csv-io.hpp  cxx-compat.hpp  dataframe.hpp  flat_map.hpp  json-io.hpp
test/: CMakeLists.txt  call_with_string.cpp  old_version.cpp  pass_by_reference_dict.cpp  pass_by_reference_string.cpp  pass_by_reference_vector.cpp  requirements.txt  returns_dict.cpp  test_clippy.py
test/ClippyBag/: CMakeLists.txt  __init__.cpp  __repr__.cpp  __str__.cpp  insert.cpp  meta.json  remove.cpp  size.cpp
test/ClippyFunctions/: returns_dict.cpp
test/TestBag/: CMakeLists.txt  __init__.cpp  __str__.cpp  add_selector.cpp  insert.cpp  meta.json  remove.cpp  remove_if.cpp  size.cpp
test/TestDF/: __init__.cpp  soonCMakeLists  testdf.cpp  testdf.hpp
test/TestFunctions/: CMakeLists.txt  call_with_optional_string.cpp  missing_version.cpp  old_version.cpp  pass_by_reference_dict.cpp  pass_by_reference_vector.cpp  returns_bool.cpp  returns_int.cpp  returns_string.cpp  returns_vec_int.cpp
test/TestGraph/: CMakeLists.txt  __init__.cpp  __str__.cpp  add.cpp  add_edge.cpp  add_node.cpp  add_series.cpp  assign.cpp  bfs  bfs.cpp  connected_components.cpp  copy_series.cpp  count.cpp  degree.cpp  drop_series.cpp  dump.cpp  dump2.cpp  extrema.cpp  foo.cpp  for_all_edges.cpp  meta.json  mvmap.hpp  ne.cpp  nv.cpp  remove.cpp  selector.hpp  series_str.cpp  testconst.cpp  testgraph.cpp  testgraph.hpp  testlocator.cpp  testmvmap.cpp  testselector.cpp  where.cpp
test/TestSelector/: CMakeLists.txt  __init__.cpp  add.cpp  drop.cpp  meta.json
test/TestSet/: CMakeLists.txt  __init__.cpp  __str__.cpp  add_selector.cpp  insert.cpp  meta.json  remove.cpp  remove_if.cpp  size.cpp
test/clippy_bag/: CMakeLists.txt  clippy_bag_insert.cpp  clippy_bag_remove_if.cpp  clippy_bag_repr.cpp  clippy_bag_str.cpp
test/include/: mvmap.hpp  testbracket.cpp  testmvmap  testmvmap.cpp  wheredev.cpp
