function(add_ygm_example example_name)
    add_example(${example_name})
    target_include_directories(${example_name} PUBLIC ${cereal_INCLUDE_DIR})
    target_include_directories(${example_name} PUBLIC ${YGM_INCLUDE_DIR})
    target_include_directories(${example_name} PUBLIC ${MPI_INCLUDE_PATH})
    target_link_libraries(${example_name} PRIVATE MPI::MPI_CXX)
endfunction()

if (MPI_CXX_FOUND)
    add_ygm_example(ygm_wordcount)
    add_ygm_example(ygm_top_k_words)
    add_ygm_example(ygm_noop)
else()
    message(STATUS "Will skip building the YGM examples")
endif()